--- a/reports/qmd_example.qmd
+++ b/reports/qmd_example.qmd
@@ -4,8 +4,9 @@ author: "Tiffany Timbers & Jordan Bourak"
 format:
   html:
     toc: true
+    embed-resources: true
     number-sections: true
-    output-dir: docs
+    fig-numbering: true
 bibliography: references.bib
 csl: apa.csl
 editor: source
