--- a/reports/qmd_example.qmd
+++ b/reports/qmd_example.qmd
@@ -17,6 +17,7 @@ execute:
   output: true
 ---
 
+
 ```{r setup, include=FALSE}
 library(tidyverse)
 library(knitr)
@@ -78,3 +79,5 @@ knitr::include_graphics("../results/horse_pop_plot_largest_sd.png")
 In @fig-largest_sd_plot, we zoom in and look at the province of `r largest_sd`, which had the largest spread of values in terms of standard deviation.
 
 # References
+::: {#refs}
+:::
