--- a/reports/qmd_example.tex
+++ b/reports/qmd_example.tex
@@ -93,6 +93,39 @@
 % Set default figure placement to htbp
 \def\fps@figure{htbp}
 \makeatother
+% definitions for citeproc citations
+\NewDocumentCommand\citeproctext{}{}
+\NewDocumentCommand\citeproc{mm}{%
+  \begingroup\def\citeproctext{#2}\cite{#1}\endgroup}
+\makeatletter
+ % allow citations to break across lines
+ \let\@cite@ofmt\@firstofone
+ % avoid brackets around text for \cite:
+ \def\@biblabel#1{}
+ \def\@cite#1#2{{#1\if@tempswa , #2\fi}}
+\makeatother
+\newlength{\cslhangindent}
+\setlength{\cslhangindent}{1.5em}
+\newlength{\csllabelwidth}
+\setlength{\csllabelwidth}{3em}
+\newenvironment{CSLReferences}[2] % #1 hanging-indent, #2 entry-spacing
+ {\begin{list}{}{%
+  \setlength{\itemindent}{0pt}
+  \setlength{\leftmargin}{0pt}
+  \setlength{\parsep}{0pt}
+  % turn on hanging indent if param 1 is 1
+  \ifodd #1
+   \setlength{\leftmargin}{\cslhangindent}
+   \setlength{\itemindent}{-1\cslhangindent}
+  \fi
+  % set entry spacing
+  \setlength{\itemsep}{#2\baselineskip}}}
+ {\end{list}}
+\usepackage{calc}
+\newcommand{\CSLBlock}[1]{\hfill\break\parbox[t]{\linewidth}{\strut\ignorespaces#1\strut}}
+\newcommand{\CSLLeftMargin}[1]{\parbox[t]{\csllabelwidth}{\strut#1\strut}}
+\newcommand{\CSLRightInline}[1]{\parbox[t]{\linewidth - \csllabelwidth}{\strut#1\strut}}
+\newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 
 \KOMAoption{captions}{tableheading}
 \makeatletter
@@ -169,14 +202,13 @@ between 1906 and 1972 for each province.
 
 Horse population data were sourced from the
 \href{http://open.canada.ca/en/open-data}{Government of Canada's Open
-Data website} ((\textbf{govcan2017a?}); (\textbf{govcan2017b?})).
+Data website} Government of Canada (2017b)
 
 \section{Methods}\label{methods}
 
-The R programming language ((\textbf{r2022?})) and the following R
-packages were used to perform the analysis: knitr ((\textbf{xie2014?})),
-tidyverse ((\textbf{wickham2017?})), and Quarto
-((\textbf{allaire2022?})).\\
+The R programming language (R Core Team (2019)) and the following R
+packages were used to perform the analysis: knitr (Xie 2014), tidyverse
+(Wickham 2017), and Quarto (Allaire et al. (2022)).\\
 \emph{Note: this report is adapted from (\textbf{timbers2020?}).}
 
 \section{Results}\label{results}
@@ -192,7 +224,7 @@ tidyverse ((\textbf{wickham2017?})), and Quarto
 
 \end{figure}%
 
-We can see from \textbf{?@fig-horse\_plot} that Ontario, Saskatchewan,
+We can see from \textbf{?@fig-horse-pops} that Ontario, Saskatchewan,
 and Alberta have had the highest horse populations in Canada. All
 provinces have had a decline in horse populations since 1940. This is
 likely due to the rebound of the Canadian automotive industry after the
@@ -202,8 +234,7 @@ time period visualized above to further support this hypothesis.
 
 Suppose we were interested in looking more closely at the province with
 the highest spread (in terms of standard deviation) of horse
-populations. We present the standard deviations in
-\textbf{?@tbl-horses\_sd}.
+populations. We present the standard deviations in \textbf{?@tbl-std}..
 
 \begin{longtable}[]{@{}lr@{}}
 \toprule\noalign{}
@@ -227,9 +258,9 @@ Note that we define standard deviation (of a sample) as
 
 \[s = \sqrt{\frac{\sum_{i=1}^N (x_i - \overline{x})^2}{N-1} }\]
 
-Additionally, note that in \textbf{?@tbl-horses\_sd} we consider the
-sample standard deviation of the number of horses during the same time
-span as \textbf{?@fig-horse\_plot}.
+Additionally, note that in \textbf{?@tbl-std}. we consider the sample
+standard deviation of the number of horses during the same time span as
+\textbf{?@fig-horse-pops}.
 
 \begin{figure}[H]
 
@@ -242,11 +273,47 @@ deviation}
 
 \end{figure}%
 
-In \textbf{?@fig-largest\_sd\_plot}, we zoom in and look at the province
-of Saskatchewan, which had the largest spread of values in terms of
+In \textbf{?@fig-horse-pops2}, we zoom in and look at the province of
+Saskatchewan, which had the largest spread of values in terms of
 standard deviation.
 
-\section{References}\label{references}
+\section*{References}\label{references}
+\addcontentsline{toc}{section}{References}
+
+\phantomsection\label{refs}
+\begin{CSLReferences}{1}{0}
+\bibitem[\citeproctext]{ref-Allaire_Quarto_2022}
+Allaire, J. J., Charles Teague, Carlos Scheidegger, Yihui Xie, and
+Christophe Dervieux. 2022. {``{Quarto}.''}
+\url{https://doi.org/10.5281/zenodo.5960048}.
+
+\bibitem[\citeproctext]{ref-horses1}
+Government of Canada. 2017a. {``Horses, Number on Farms at June 1 and at
+December 1.''} Open Government - Open Data.
+\url{https://open.canada.ca/data/en/dataset/a3ecf553-8ec4-4551-a0fe-8df1472c6cf7}.
+
+\bibitem[\citeproctext]{ref-horses2}
+---------. 2017b. {``Horses, Number on Farms at June 1, Farm Value Per
+Head and Total Farm Value.''} Open Government - Open Data.
+\url{https://open.canada.ca/data/en/dataset/e175ef9c-98f0-49b3-8131-ca0e3895a0cb}.
+
+\bibitem[\citeproctext]{ref-R}
+R Core Team. 2019. \emph{R: A Language and Environment for Statistical
+Computing}. Vienna, Austria: R Foundation for Statistical Computing.
+\url{https://www.R-project.org/}.
+
+\bibitem[\citeproctext]{ref-tidyverse}
+Wickham, Hadley. 2017. \emph{Tidyverse: Easily Install and Load the
+'Tidyverse'}. \url{https://CRAN.R-project.org/package=tidyverse}.
+
+\bibitem[\citeproctext]{ref-knitr}
+Xie, Yihui. 2014. {``Knitr: A Comprehensive Tool for Reproducible
+Research in {R}.''} In \emph{Implementing Reproducible Computational
+Research}, edited by Victoria Stodden, Friedrich Leisch, and Roger D.
+Peng. Chapman; Hall/CRC.
+\url{http://www.crcpress.com/product/isbn/9781466561595}.
+
+\end{CSLReferences}
 
 
 
