--- a/reports/qmd_example.tex
+++ b/reports/qmd_example.tex
@@ -234,7 +234,7 @@ time period visualized above to further support this hypothesis.
 
 Suppose we were interested in looking more closely at the province with
 the highest spread (in terms of standard deviation) of horse
-populations. We present the standard deviations in \textbf{?@tbl-std}..
+populations. We present the standard deviations in \textbf{?@tbl-std}.
 
 \begin{longtable}[]{@{}lr@{}}
 \toprule\noalign{}
