--- a/reports/qmd_example.tex
+++ b/reports/qmd_example.tex
@@ -224,17 +224,18 @@ packages were used to perform the analysis: knitr (Xie 2014), tidyverse
 
 \end{figure}%
 
-We can see from \textbf{?@fig-horse-pops} that Ontario, Saskatchewan,
-and Alberta have had the highest horse populations in Canada. All
-provinces have had a decline in horse populations since 1940. This is
-likely due to the rebound of the Canadian automotive industry after the
-Great Depression and the Second World War. An interesting follow-up
+We can see from (\textbf{horse\_plot?}) that Ontario, Saskatchewan, and
+Alberta have had the highest horse populations in Canada. All provinces
+have had a decline in horse populations since 1940. This is likely due
+to the rebound of the Canadian automotive industry after the Great
+Depression and the Second World War. An interesting follow-up
 visualization would be car sales per year for each province over the
 time period visualized above to further support this hypothesis.
 
 Suppose we were interested in looking more closely at the province with
 the highest spread (in terms of standard deviation) of horse
-populations. We present the standard deviations in \textbf{?@tbl-std}.
+populations. We present the standard deviations in
+(\textbf{horses\_sd?}).
 
 \begin{longtable}[]{@{}lr@{}}
 \toprule\noalign{}
@@ -258,9 +259,9 @@ Note that we define standard deviation (of a sample) as
 
 \[s = \sqrt{\frac{\sum_{i=1}^N (x_i - \overline{x})^2}{N-1} }\]
 
-Additionally, note that in \textbf{?@tbl-std}. we consider the sample
-standard deviation of the number of horses during the same time span as
-\textbf{?@fig-horse-pops}.
+Additionally, note that in (\textbf{horses\_sd?}). we consider the
+sample standard deviation of the number of horses during the same time
+span as (\textbf{horse\_plot?}).
 
 \begin{figure}[H]
 
@@ -273,7 +274,7 @@ deviation}
 
 \end{figure}%
 
-In \textbf{?@fig-horse-pops2}, we zoom in and look at the province of
+In (\textbf{largest\_sd\_plot?}), we zoom in and look at the province of
 Saskatchewan, which had the largest spread of values in terms of
 standard deviation.
 
