--- a/reports/qmd_example.tex
+++ b/reports/qmd_example.tex
@@ -209,20 +209,9 @@ Data website} Government of Canada (2017b)
 The R programming language (R Core Team (2019)) and the following R
 packages were used to perform the analysis: knitr (Xie 2014), tidyverse
 (Wickham 2017), and Quarto (Allaire et al. (2022)).\\
-\emph{Note: this report is adapted from (\textbf{timbers2020?}).}
+\emph{Note: this report is adapted from Timbers (2020).}
 
 \section{Results}\label{results}
-
-\begin{figure}[H]
-
-{\centering \pandocbounded{\includegraphics[keepaspectratio]{../results/horse_pops_plot.png}}
-
-}
-
-\caption{Horse populations for all provinces in Canada from 1906 -
-1972.}
-
-\end{figure}%
 
 We can see from (\textbf{horse\_plot?}) that Ontario, Saskatchewan, and
 Alberta have had the highest horse populations in Canada. All provinces
@@ -302,6 +291,10 @@ Head and Total Farm Value.''} Open Government - Open Data.
 R Core Team. 2019. \emph{R: A Language and Environment for Statistical
 Computing}. Vienna, Austria: R Foundation for Statistical Computing.
 \url{https://www.R-project.org/}.
+
+\bibitem[\citeproctext]{ref-ttimbers-horses}
+Timbers, Tiffany. 2020. \emph{Historical Horse Population in Canada}.
+\url{https://github.com/ttimbers/equine_numbers_value_canada_parameters}.
 
 \bibitem[\citeproctext]{ref-tidyverse}
 Wickham, Hadley. 2017. \emph{Tidyverse: Easily Install and Load the
